# varbxaltinvfinalproj

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yml  hfri_merger_arb.csv  pyproject.toml  requirements.txt  varbx_returns.csv
notebooks/: 01_clean_data.ipynb  02_performance_metrics.ipynb  03_risk_analysis.ipynb  04_visualizations.ipynb  05_report_export.ipynb
outputs/: qualitative_info.json
scripts/: create_data_files.py  create_pitch_deck.py  extract_data_from_pdfs.py  extract_qualitative_info.py
src/: __init__.py  config.py
src/analytics/: __init__.py  performance_metrics.py  regression.py  risk.py
src/data/: loaders.py  preprocess.py  schema.py
src/utils/: __init__.py  io.py  paths.py
src/viz/: __init__.py  plots.py  styling.py
tests/: __init__.py  conftest.py  test_loaders.py  test_metrics.py  test_regression.py  test_risk.py
